fixed navigation bar to top and adjust video cards alignment

--- a/app/assets/stylesheets/components/_videocard.scss
+++ b/app/assets/stylesheets/components/_videocard.scss
@@ -64,3 +64,12 @@
   position: relative;
 }
 
+.right-info {
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 13px;
+  line-height: 18px;
+  width: 300px;
+  justify-content: flex-end !important;
+}
